# fall-2022-ethics-work-Mr-Higgins

./: pyproject.toml
py/: python_example.py
week03/: privacy_terms.md
week04/: names.txt
week07/: websites.md
week09_seating/: seating.md
weekly_ethicacy/week02/: contact-tracing.md
weekly_ethicacy/week04/: regex.py
